--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,15 @@ html {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    text-decoration: none;
+    color: black;
+    font-size:medium; 
     /* margin:0 1rem;  */
+}
+.nav_menu {
+  text-decoration: none;
+  font-size: medium;
+  color: black;
 }
 /*<HEADER>*/
 
@@ -35,7 +43,7 @@ main {
 #left_side {
     display: flex; 
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin-right: 5%;
 }
 #buttons_top {
@@ -66,35 +74,34 @@ main {
 
 .cards {
 display: flex;
-flex-direction: row;
-justify-content: space-around;
-align-content: space-around;
-flex-wrap: wrap;
+gap:17px;
+justify-content: center;
+align-content: center;
 }
 .card {
     display: flex;
     flex-direction: column;
     /* border: 1px solid black; */
     margin: 0.5rem; 
-    width: 30%; 
+    max-width: 356px; 
     height: auto;
 }
 .card-picture>img {
     display: block;
-    height: 20px; width: auto;
+    height: 40px;
     margin-top:0.25rem; 
     margin-left: auto;
     margin-right: auto; 
 }
 .card-header>h3 {
     margin: 0.25rem auto;
-    font-size: 1.3rem;
+    font-size: 2rem;
     text-align: center;
 }
 .card-text>p {
     margin: 2px auto; 
-    font-size: 1.2rem; 
-text-align: center;
+    font-size: large; 
+    text-align: center;
 }
 #card_project {
     border: 1px solid black; 
@@ -112,6 +119,9 @@ text-align: center;
 
 /* Slideshow container */
 .slideshow-container {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
   max-width: 1000px;
   position: relative;
   margin: auto;
@@ -124,7 +134,7 @@ text-align: center;
 .galary_img {
   text-align: center;
   border-radius: 3%;
-  height: 500px;
+  height: 550px;
   width: auto;
 }
 
@@ -135,7 +145,7 @@ text-align: center;
   width: auto;
   
   padding: 16px;
-  color: white;
+  
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -150,27 +160,23 @@ text-align: center;
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+
+  background-color: rgba(226, 223, 223, 0.809);
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+  color:black;
+  font-size: 1.2rem;
+  word-break: break-all;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+  font-size: 1rem;
+  position: relative;
+  top: 2.5rem;
 }
 
 /* The dots/bullets/indicators */
@@ -212,23 +218,28 @@ text-align: center;
 
 /*<FOOTER>*/
 footer {
-    text-align: left;
+  position: absolute;
+  left:0px; 
+  width: 100%;
+  display: flex; 
+  gap: 3rem; 
     background-color: black;
     color: white;
-    font-size: 1rem;
+    font-size: medium;
 }
 /*<FOOTER>*/
 
-h1 {
-    text-align: left;
-    font-size:3rem; 
-}
 h2 {
 margin-top: 2rem; 
 margin-bottom: 0.5rem;
 color:black;
-font-size:large; 
+font-size:2.5rem; 
 text-align: center;
+}
+.icons {
+  height: 3rem; 
+  width: auto;
+  margin-top: 8px;
 }
 /* #header {
     color:black; 
