--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ flex-wrap: wrap;
 /* Slideshow container */
 .slideshow-container {
   display: flex; 
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   max-width: 1000px;
   position: relative;
